EL-3593 - IE Fixing Icon Alignment

--- a/docs/app/pages/css/css-sections/icons/ux-icons/icon-preview/icon-snippet/icon-snippet.component.less
+++ b/docs/app/pages/css/css-sections/icons/ux-icons/icon-preview/icon-snippet/icon-snippet.component.less
@@ -10,6 +10,7 @@
 
     .snippet-copy-button {
         display: flex;
+        align-items: center;
     }
 
     ::ng-deep pre[class*="language-"] {
